kuber/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favapp-deployment
  labels:
    app: favapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: favapp 
  template:
    metadata:
      labels:
        app: favapp
    spec:
      containers:
      - name: favapp
        image: kubeapp:test3
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
