kuber/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: favapp-service
  labels:
    app: favapp
spec:
  type: LoadBalancer
  ports:
  - name: api
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: favapp
